# ModbusTCP

./: CMakeLists.txt  Emicon_Сириус.pcapng  LICENSE  ModbusTCP.cpp  ModbusTCP.h  README.md  main.cpp
Socket/: Socket.cxx  Socket.hxx  TCP_Socket.cxx  TCP_Socket.hxx  UDP_Socket.cxx  UDP_Socket.hxx
Для тестов/: Mbslave1.mbs  Mbslave2.mbs  Mbslave3.mbs  Mbslave4.mbs
